--- a/src/FlexTemplate/Views/Home/Index.cshtml
+++ b/src/FlexTemplate/Views/Home/Index.cshtml
@@ -15,23 +15,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- Fav and Touch Icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
-    <link rel="shortcut icon" href="images/ico/favicon.png">
-
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="~/html/images/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="~/html/images/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="~/html/images/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="~/html/images/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href="~/html/images/ico/favicon.png">
+    
     <!-- CSS Plugins -->
-    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" media="screen">
-    <link href="css/animate.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
-    <link href="css/component.css" rel="stylesheet">
-
+    <link rel="stylesheet" type="text/css" href="~/html/bootstrap/css/bootstrap.min.css" media="screen">
+    <link href="~/html/css/animate.css" rel="stylesheet" />
+    <link href="~/html/css/main.css" rel="stylesheet">
+    <link href="~/html/css/component.css" rel="stylesheet">
+    
     <!-- CSS Custom -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="~/html/css/style.css" rel="stylesheet">
 
     <!-- For your own style -->
-    <link href="css/your-style.css" rel="stylesheet">
+    <link href="~/html/css/your-style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -57,9 +57,9 @@
                 <div class="header-inner">
 
                     <div class="navbar-header">
-                        <a class="navbar-brand hidden-xs off-sticky" href="index.html"><img src="images/logo-white.png" alt="Image" /></a>
-                        <a class="navbar-brand hidden-xs on-sticky" href="index.html"><img src="images/logo.png" alt="Image" /></a>
-                        <a class="navbar-brand visible-xs" href="index.html"><img src="images/logo-white-xs.png" alt="Image" /></a>
+                        <a class="navbar-brand hidden-xs off-sticky" href="index.html"><img src="~/html/images/logo-white.png" alt="Image" /></a>
+                        <a class="navbar-brand hidden-xs on-sticky" href="index.html"><img src="~/html/images/logo.png" alt="Image" /></a>
+                        <a class="navbar-brand visible-xs" href="index.html"><img src="~/html/images/logo-white-xs.png" alt="Image" /></a>
                     </div>
 
                     <div id="navbar" class="collapse navbar-collapse navbar-arrow pull-left">
@@ -257,7 +257,7 @@
         <div class="main-wrapper scrollspy-container">
 
             <!-- start hero-header -->
-            <div class="hero alt-height" style="background-image:url('images/hero-header/01.jpg');">
+            <div class="hero alt-height" style="background-image:url('~/html/images/hero-header/01.jpg');">
                 <div class="container">
 
                     <h1>Find the best restaurants at the best price</h1>
@@ -341,7 +341,7 @@
                                     <div class="destination-grid-item-02">
                                         <a href="#">
                                             <div class="image">
-                                                <img src="images/hot-item/01.jpg" alt="Hot Item">
+                                                <img src="~/html/images/hot-item/01.jpg" alt="Hot Item">
                                             </div>
                                             <div class="content">
                                                 <h4><span>Bangkok</span></h4>
@@ -357,7 +357,7 @@
                                     <div class="destination-grid-item-02">
                                         <a href="#">
                                             <div class="image">
-                                                <img src="images/hot-item/02.jpg" alt="Hot Item">
+                                                <img src="~/html/images/hot-item/02.jpg" alt="Hot Item">
                                             </div>
                                             <div class="content">
                                                 <h4><span>Kuala Lumpur</span></h4>
@@ -373,7 +373,7 @@
                                     <div class="destination-grid-item-02">
                                         <a href="#">
                                             <div class="image">
-                                                <img src="images/hot-item/03.jpg" alt="Hot Item">
+                                                <img src="~/html/images/hot-item/03.jpg" alt="Hot Item">
                                             </div>
                                             <div class="content">
                                                 <h4><span>Pattaya</span></h4>
@@ -389,7 +389,7 @@
                                     <div class="destination-grid-item-02">
                                         <a href="#">
                                             <div class="image">
-                                                <img src="images/hot-item/04.jpg" alt="Hot Item">
+                                                <img src="~/html/images/hot-item/04.jpg" alt="Hot Item">
                                             </div>
                                             <div class="content">
                                                 <h4><span>Penang</span></h4>
@@ -441,7 +441,7 @@
                                     <div class="restaurant-grid-item">
                                         <a href="#">
                                             <div class="image">
-                                                <img src="images/restaurant/01.jpg" alt="Image" />
+                                                <img src="~/html/images/restaurant/01.jpg" alt="Image" />
                                             </div>
                                             <div class="content">
                                                 <h5>The Smokin' Pug</h5>
@@ -464,7 +464,7 @@
                                     <div class="restaurant-grid-item">
                                         <a href="#">
                                             <div class="image">
-                                                <img src="images/restaurant/02.jpg" alt="Image" />
+                                                <img src="~/html/images/restaurant/02.jpg" alt="Image" />
                                             </div>
                                             <div class="content">
                                                 <h5>J'AIME by Jean-Michel Lorain</h5>
@@ -487,7 +487,7 @@
                                     <div class="restaurant-grid-item">
                                         <a href="#">
                                             <div class="image">
-                                                <img src="images/restaurant/03.jpg" alt="Image" />
+                                                <img src="~/html/images/restaurant/03.jpg" alt="Image" />
                                             </div>
                                             <div class="content">
                                                 <h5>DID - Dine in the Dark </h5>
@@ -510,7 +510,7 @@
                                     <div class="restaurant-grid-item">
                                         <a href="#">
                                             <div class="image">
-                                                <img src="images/restaurant/04.jpg" alt="Image" />
+                                                <img src="~/html/images/restaurant/04.jpg" alt="Image" />
                                             </div>
                                             <div class="content">
                                                 <h5>JP French Restaurant </h5>
@@ -533,7 +533,7 @@
                                     <div class="restaurant-grid-item">
                                         <a href="#">
                                             <div class="image">
-                                                <img src="images/restaurant/08.jpg" alt="Image" />
+                                                <img src="~/html/images/restaurant/08.jpg" alt="Image" />
                                             </div>
                                             <div class="content">
                                                 <h5>Le Normandie</h5>
@@ -556,7 +556,7 @@
                                     <div class="restaurant-grid-item">
                                         <a href="#">
                                             <div class="image">
-                                                <img src="images/restaurant/06.jpg" alt="Image" />
+                                                <img src="~/html/images/restaurant/06.jpg" alt="Image" />
                                             </div>
                                             <div class="content">
                                                 <h5>J'AIME by Jean-Michel Lorain</h5>
@@ -579,7 +579,7 @@
                                     <div class="restaurant-grid-item">
                                         <a href="#">
                                             <div class="image">
-                                                <img src="images/restaurant/07.jpg" alt="Image" />
+                                                <img src="~/html/images/restaurant/07.jpg" alt="Image" />
                                             </div>
                                             <div class="content">
                                                 <h5>Le Beaulieu</h5>
@@ -602,7 +602,7 @@
                                     <div class="restaurant-grid-item">
                                         <a href="#">
                                             <div class="image">
-                                                <img src="images/restaurant/08.jpg" alt="Image" />
+                                                <img src="~/html/images/restaurant/08.jpg" alt="Image" />
                                             </div>
                                             <div class="content">
                                                 <h5>Waterside Resort Restaurant</h5>
@@ -709,7 +709,7 @@
 
                             <div class="GridLex-col-6_sm-6_xs-12_xss-12">
 
-                                <div class="featured-image" style="background-image:url('images/featured-image/01.jpg');">
+                                <div class="featured-image" style="background-image:url('~/html/images/featured-image/01.jpg');">
                                     <div class="content">
                                         <a href="#" class="block">
                                             <h3 class="text-primary font300 mb-10">Browse our Restaurant Blog</h3>
@@ -722,7 +722,7 @@
 
                             <div class="GridLex-col-6_sm-6_xs-12_xss-12">
 
-                                <div class="featured-image" style="background-image:url('images/featured-image/02.jpg');">
+                                <div class="featured-image" style="background-image:url('~/html/images/featured-image/02.jpg');">
                                     <div class="content">
                                         <a href="#" class="block">
                                             <h3 class="text-primary font300 mb-10">For Restaurant Owners</h3>
@@ -766,7 +766,7 @@
 
                             <div class="footer-logo">
                                 <a href="#home">
-                                    <img src="images/logo-white.png" alt="Image" />
+                                    <img src="~/html/images/logo-white.png" alt="Image" />
                                 </a>
                             </div>
 
@@ -900,26 +900,26 @@
 
 
     <!-- JS -->
-    <script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
-    <script type="text/javascript" src="js/jquery-migrate-1.4.1.min.js"></script>
-    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/SmoothScroll.min.js"></script>
-    <script type="text/javascript" src="js/jquery.waypoints.min.js"></script>
-    <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="js/jquery.slicknav.min.js"></script>
-    <script type="text/javascript" src="js/spin.min.js"></script>
-    <script type="text/javascript" src="js/jquery.introLoader.min.js"></script>
-    <script type="text/javascript" src="js/fancySelect.js"></script>
-    <script type="text/javascript" src="js/bootstrap-rating.js"></script>
-    <script type="text/javascript" src="js/select2.full.js"></script>
-    <script type="text/javascript" src="js/slick.min.js"></script>
-    <script type="text/javascript" src="js/jquery.placeholder.min.js"></script>
-    <script type="text/javascript" src="js/ion.rangeSlider.min.js"></script>
-    <script type="text/javascript" src="js/readmore.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap-modalmanager.js"></script>
-    <script type="text/javascript" src="js/bootstrap-modal.js"></script>
-    <script type="text/javascript" src="js/instagram.min.js"></script>
-    <script type="text/javascript" src="js/customs.js"></script>
+    <script type="text/javascript" src="~/html/js/jquery-2.2.4.min.js"></script>
+    <script type="text/javascript" src="~/html/js/jquery-migrate-1.4.1.min.js"></script>
+    <script type="text/javascript" src="~/html/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="~/html/js/SmoothScroll.min.js"></script>
+    <script type="text/javascript" src="~/html/js/jquery.waypoints.min.js"></script>
+    <script type="text/javascript" src="~/html/js/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="~/html/js/jquery.slicknav.min.js"></script>
+    <script type="text/javascript" src="~/html/js/spin.min.js"></script>
+    <script type="text/javascript" src="~/html/js/jquery.introLoader.min.js"></script>
+    <script type="text/javascript" src="~/html/js/fancySelect.js"></script>
+    <script type="text/javascript" src="~/html/js/bootstrap-rating.js"></script>
+    <script type="text/javascript" src="~/html/js/select2.full.js"></script>
+    <script type="text/javascript" src="~/html/js/slick.min.js"></script>
+    <script type="text/javascript" src="~/html/js/jquery.placeholder.min.js"></script>
+    <script type="text/javascript" src="~/html/js/ion.rangeSlider.min.js"></script>
+    <script type="text/javascript" src="~/html/js/readmore.min.js"></script>
+    <script type="text/javascript" src="~/html/js/bootstrap-modalmanager.js"></script>
+    <script type="text/javascript" src="~/html/js/bootstrap-modal.js"></script>
+    <script type="text/javascript" src="~/html/js/instagram.min.js"></script>
+    <script type="text/javascript" src="~/html/js/customs.js"></script>
 
 
 </body>
