--- a/src/FlexTemplate/Views/Shared/Components/Footer/Default.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Footer/Default.cshtml
@@ -7,9 +7,9 @@
         <div class="header-inner">
 
             <div class="navbar-header">
-                <a class="navbar-brand hidden-xs off-sticky" href="index.html"><img src="~/html/images/logo-white.png" alt="Image" /></a>
-                <a class="navbar-brand hidden-xs on-sticky" href="index.html"><img src="~/html/images/logo.png" alt="Image" /></a>
-                <a class="navbar-brand visible-xs" href="index.html"><img src="~/html/images/logo-white-xs.png" alt="Image" /></a>
+                <a class="navbar-brand hidden-xs off-sticky" href="index.html"><img src="~/images/logo-white.png" alt="Image" /></a>
+                <a class="navbar-brand hidden-xs on-sticky" href="index.html"><img src="~/images/logo.png" alt="Image" /></a>
+                <a class="navbar-brand visible-xs" href="index.html"><img src="~/images/logo-white-xs.png" alt="Image" /></a>
             </div>
 
             <div id="navbar" class="collapse navbar-collapse navbar-arrow pull-left">
