--- a/src/FlexTemplate/Views/Shared/_Layout.cshtml
+++ b/src/FlexTemplate/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Title Of Site -->
-  <title>Table Finder</title>
+  <title>@ViewData["Title"]</title>
   <meta name="description" content="HTML Responsive Template for Restaurant Finder Based on Twitter Bootstrap 3.x.x" />
   <meta name="keywords" content="restaurant, dinner, lunch, eat, food, rice, dine, menu, dining, meal, cafe, breakfast" />
   <meta name="author" content="crenoveative">
@@ -42,7 +42,7 @@
 
 </head>
 
-<body class="full-width-container transparent-header">
+<body class="@ViewData["BodyClasses"]">
   <div id="introLoader" class="introLoading"></div>
 
 
