[FIX] current components

--- a/src/FlexTemplate/Views/Shared/Components/Footer/Default.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Footer/Default.cshtml
@@ -1,5 +1,5 @@
 ﻿<!-- start Footer Wrapper -->
-<div class="footer-wrapper scrollspy-footer">
+<div class="c-footer footer-wrapper scrollspy-footer">
   <div class="overflow-hidden">
     <div class="instagram-wrapper">
       <div id="instagram_long" class="instagram-long"></div>
