--- a/src/FlexTemplate/Views/Shared/Components/Search/Default.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Search/Default.cshtml
@@ -1,5 +1,5 @@
 ﻿<!-- start hero-header -->
-<div class="hero alt-height" style="background-image:url('~/images/hero-header/01.jpg');">
+<div class="c-search hero alt-height" style="background-image:url('~/images/hero-header/01.jpg');">
     <div class="container">
 
         <h1>Find the best restaurants at the best price</h1>
