--- a/src/FlexTemplate/Views/Shared/Components/Header/Default.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Header/Default.cshtml
@@ -1,5 +1,5 @@
 ﻿<!-- start Header -->
-<header id="header">
+<header id="header" class="c-header">
 
     <!-- start Navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
