--- a/src/FlexTemplate/Views/Home/Index.cshtml
+++ b/src/FlexTemplate/Views/Home/Index.cshtml
@@ -11,32 +11,8 @@
 
   @await Component.InvokeAsyns("Capabilities")
 
-  <section class="bg-white">
-    <div class="container">
-      <div class="GridLex-gap-30 GridLex-gap-20-mdd">
-        <div class="GridLex-grid-noGutter-equalHeight GridLex-grid-center">
-          <div class="GridLex-col-6_sm-6_xs-12_xss-12">
-            <div class="featured-image" style="background-image:url('~/html/images/featured-image/01.jpg');">
-              <div class="content">
-                <a href="#" class="block">
-                  <h3 class="text-primary font300 mb-10">Browse our Restaurant Blog</h3> Explore news, reviews & recommendations!
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="GridLex-col-6_sm-6_xs-12_xss-12">
-            <div class="featured-image" style="background-image:url('~/html/images/featured-image/02.jpg');">
-              <div class="content">
-                <a href="#" class="block">
-                  <h3 class="text-primary font300 mb-10">For Restaurant Owners</h3> Join our vibrant restaurant marketplace!
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  @await Component.InvokeAsyns("Suggestions")
+
 </div>
 
 <!-- end Main Wrapper -->
