[FIX] path for content

--- a/src/FlexTemplate/Views/Home/Index.cshtml
+++ b/src/FlexTemplate/Views/Home/Index.cshtml
@@ -9,9 +9,9 @@
 
   @await Component.InvokeAsync("ThisCityPlaces")
 
-  @await Component.InvokeAsyns("Capabilities")
+  @await Component.InvokeAsync("Capabilities")
 
-  @await Component.InvokeAsyns("Suggestions")
+  @await Component.InvokeAsync("Suggestions")
 
 </div>
 
