--- a/src/FlexTemplate/Views/Shared/Components/OtherCitiesPlaces/Default.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/OtherCitiesPlaces/Default.cshtml
@@ -15,7 +15,7 @@
             <div class="destination-grid-item-02">
               <a href="#">
                 <div class="image">
-                  <img src="~/html/images/hot-item/01.jpg" alt="Hot Item">
+                  <img src="~/images/hot-item/01.jpg" alt="Hot Item">
                 </div>
                 <div class="content">
                   <h4><span>Bangkok</span></h4>
@@ -28,7 +28,7 @@
             <div class="destination-grid-item-02">
               <a href="#">
                 <div class="image">
-                  <img src="~/html/images/hot-item/02.jpg" alt="Hot Item">
+                  <img src="~/images/hot-item/02.jpg" alt="Hot Item">
                 </div>
                 <div class="content">
                   <h4><span>Kuala Lumpur</span></h4>
@@ -41,7 +41,7 @@
             <div class="destination-grid-item-02">
               <a href="#">
                 <div class="image">
-                  <img src="~/html/images/hot-item/03.jpg" alt="Hot Item">
+                  <img src="~/images/hot-item/03.jpg" alt="Hot Item">
                 </div>
                 <div class="content">
                   <h4><span>Pattaya</span></h4>
@@ -54,7 +54,7 @@
             <div class="destination-grid-item-02">
               <a href="#">
                 <div class="image">
-                  <img src="~/html/images/hot-item/04.jpg" alt="Hot Item">
+                  <img src="~/images/hot-item/04.jpg" alt="Hot Item">
                 </div>
                 <div class="content">
                   <h4><span>Penang</span></h4>
