--- a/src/FlexTemplate/Views/Shared/Components/ThisCityPlaces/Default.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/ThisCityPlaces/Default.cshtml
@@ -15,7 +15,7 @@
             <div class="restaurant-grid-item">
               <a href="#">
                 <div class="image">
-                  <img src="~/html/images/restaurant/01.jpg" alt="Image" />
+                  <img src="~/images/restaurant/01.jpg" alt="Image" />
                 </div>
                 <div class="content">
                   <h5>The Smokin' Pug</h5>
@@ -35,7 +35,7 @@
             <div class="restaurant-grid-item">
               <a href="#">
                 <div class="image">
-                  <img src="~/html/images/restaurant/02.jpg" alt="Image" />
+                  <img src="~/images/restaurant/02.jpg" alt="Image" />
                 </div>
                 <div class="content">
                   <h5>J'AIME by Jean-Michel Lorain</h5>
@@ -55,7 +55,7 @@
             <div class="restaurant-grid-item">
               <a href="#">
                 <div class="image">
-                  <img src="~/html/images/restaurant/03.jpg" alt="Image" />
+                  <img src="~/images/restaurant/03.jpg" alt="Image" />
                 </div>
                 <div class="content">
                   <h5>DID - Dine in the Dark </h5>
@@ -75,7 +75,7 @@
             <div class="restaurant-grid-item">
               <a href="#">
                 <div class="image">
-                  <img src="~/html/images/restaurant/04.jpg" alt="Image" />
+                  <img src="~/images/restaurant/04.jpg" alt="Image" />
                 </div>
                 <div class="content">
                   <h5>JP French Restaurant </h5>
@@ -95,7 +95,7 @@
             <div class="restaurant-grid-item">
               <a href="#">
                 <div class="image">
-                  <img src="~/html/images/restaurant/08.jpg" alt="Image" />
+                  <img src="~/images/restaurant/08.jpg" alt="Image" />
                 </div>
                 <div class="content">
                   <h5>Le Normandie</h5>
@@ -115,7 +115,7 @@
             <div class="restaurant-grid-item">
               <a href="#">
                 <div class="image">
-                  <img src="~/html/images/restaurant/06.jpg" alt="Image" />
+                  <img src="~/images/restaurant/06.jpg" alt="Image" />
                 </div>
                 <div class="content">
                   <h5>J'AIME by Jean-Michel Lorain</h5>
@@ -135,7 +135,7 @@
             <div class="restaurant-grid-item">
               <a href="#">
                 <div class="image">
-                  <img src="~/html/images/restaurant/07.jpg" alt="Image" />
+                  <img src="~/images/restaurant/07.jpg" alt="Image" />
                 </div>
                 <div class="content">
                   <h5>Le Beaulieu</h5>
@@ -155,7 +155,7 @@
             <div class="restaurant-grid-item">
               <a href="#">
                 <div class="image">
-                  <img src="~/html/images/restaurant/08.jpg" alt="Image" />
+                  <img src="~/images/restaurant/08.jpg" alt="Image" />
                 </div>
                 <div class="content">
                   <h5>Waterside Resort Restaurant</h5>
