--- a/src/FlexTemplate/Views/Shared/Components/OtherCitiesPlaces/Default.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/OtherCitiesPlaces/Default.cshtml
@@ -1,4 +1,5 @@
-﻿<section class="c-other-cities-places">
+﻿@model FlexTemplate.ViewModels.OtherCitiesPlacesViewModel
+<section class="c-other-cities-places">
   <div class="container">
     <div class="row">
       <div class="col-md-8">
