--- a/src/FlexTemplate/Views/Shared/Components/Search/Default.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Search/Default.cshtml
@@ -1,5 +1,6 @@
-﻿<!-- start hero-header -->
-<div class="c-search hero alt-height" style="background-image:url('~/images/hero-header/01.jpg');">
+﻿@model FlexTemplate.ViewModels.SearchViewModel
+<!-- start hero-header -->
+<div class="c-search hero alt-height" style="background-image:url('');">
   <div class="container">
     <h1>Find the best restaurants at the best price</h1>
     <p>More than 20,000 restaurants all around the world and in your country or city</p>
@@ -10,16 +11,18 @@
         </div>
         <div class="form-group">
           <select class="custom-select" id="cuisine-type">
-            <option value="0">Cuisine Type</option>
-            <option value="1">African</option>
-            <option value="2">American‎</option>
-            <option value="3">Italian</option>
-            <option value="4">French</option>
-            <option value="5">Indochinese‎</option>
-            <option value="6">Halal</option>
+          @{
+            if (Model != null)
+            {
+              for (int i = 0; i < Model.CategoriesNames.Count; i++)
+              {
+                <option value="@i">@Model.CategoriesNames[i]</option>
+              }
+            }
+          }
           </select>
         </div>
-        <div class="form-group">
+        <!--<div class="form-group">
           <select class="custom-select" id="no-of-people">
             <option value="0">Number Of People</option>
             <option value="1">1</option>
@@ -29,7 +32,7 @@
             <option value="5">5</option>
             <option value="6">6</option>
           </select>
-        </div>
+        </div>-->
         <button class="btn btn-primary btn-form">Find a Table</button>
       </form>
       <div class="clear"></div>
