[FIX] Деталь заведений в текущем городе работает

--- a/src/FlexTemplate/Views/Home/Index.cshtml
+++ b/src/FlexTemplate/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
   @await Component.InvokeAsync("OtherCitiesPlaces", new { model = Model.OtherCitiesPlacesViewModel})
 
-  @await Component.InvokeAsync("ThisCityPlaces")
+  @await Component.InvokeAsync("ThisCityPlaces", new { model = Model.ThisCityPlacesViewModel})
 
   @await Component.InvokeAsync("Capabilities")
 
