--- a/src/FlexTemplate/Views/Shared/Components/Search/Default.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Search/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿@model FlexTemplate.ViewModels.SearchViewModel
 <!-- start hero-header -->
-<div class="c-search hero alt-height" style="background-image:url('');">
+<div class="c-search hero alt-height" style="background-image:url('@Model.PhotoPath');">
   <div class="container">
     <h1>Find the best restaurants at the best price</h1>
     <p>More than 20,000 restaurants all around the world and in your country or city</p>
