--- a/src/FlexTemplate/Views/Shared/Components/Suggestions/Default.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Suggestions/Default.cshtml
@@ -3,7 +3,7 @@
     <div class="GridLex-gap-30 GridLex-gap-20-mdd">
       <div class="GridLex-grid-noGutter-equalHeight GridLex-grid-center">
         <div class="GridLex-col-6_sm-6_xs-12_xss-12">
-          <div class="featured-image" style="background-image:url('~/images/featured-image/01.jpg');">
+          <div class="featured-image" style="background-image:url('images/featured-image/01.jpg');">
             <div class="content">
               <a href="#" class="block">
                 <h3 class="text-primary font300 mb-10">Browse our Restaurant Blog</h3> Explore news, reviews & recommendations!
@@ -12,7 +12,7 @@
           </div>
         </div>
         <div class="GridLex-col-6_sm-6_xs-12_xss-12">
-          <div class="featured-image" style="background-image:url('~/images/featured-image/02.jpg');">
+          <div class="featured-image" style="background-image:url('images/featured-image/02.jpg');">
             <div class="content">
               <a href="#" class="block">
                 <h3 class="text-primary font300 mb-10">For Restaurant Owners</h3> Join our vibrant restaurant marketplace!
