--- a/src/FlexTemplate/Views/Shared/Components/OtherCitiesPlaces/Default.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/OtherCitiesPlaces/Default.cshtml
@@ -1,26 +1,28 @@
 ﻿@model FlexTemplate.ViewModels.OtherCitiesPlacesViewModel
 <section class="c-other-cities-places">
-    <div class="container">
-        @if (Model != null)
-        {
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="section-title-02">
-                        <h3><span>Your Nearest Destinations</span></h3>
-                        <p>Mist is highly flexible, and will be able to adjust to any of your customization’s. Get your projects to a new level. Included is animation on view, Parallax block, counters and charts, high resolution graphics etc.</p>
-                    </div>
-                </div>
+
+  <div class="container">
+    @if (Model != null)
+    {
+      <div class="row">
+        <span class="user-edit-icon"></span>
+        <div class="col-md-8">
+          <div class="section-title-02">
+            <h3><span>Your Nearest Destinations</span></h3>
+            <p class="user-edit-text">Mist is highly flexible, and will be able to adjust to any of your customization’s. Get your projects to a new level. Included is animation on view, Parallax block, counters and charts, high resolution graphics etc.</p>
+          </div>
+        </div>
+      </div>
+      <div class="destination-grid-wrapper-02">
+        <div class="GridLex-gap-30 GridLex-gap-20-mdd GridLex-gap-10-xs">
+            <div class="GridLex-grid-noGutter-equalHeight GridLex-grid-center">
+              @foreach (var vm in Model.OtherCityPlacesViewModels)
+              {
+                  @await Component.InvokeAsync("OtherCityPlaces", new {model = vm});
+              }
             </div>
-            <div class="destination-grid-wrapper-02">
-                <div class="GridLex-gap-30 GridLex-gap-20-mdd GridLex-gap-10-xs">
-                    <div class="GridLex-grid-noGutter-equalHeight GridLex-grid-center">
-                        @foreach (var vm in Model.OtherCityPlacesViewModels)
-                        {
-                            @await Component.InvokeAsync("OtherCityPlaces", new {model = vm});
-                        }
-                    </div>
-                </div>
-            </div>
-        }
-    </div>
+        </div>
+      </div>
+    }
+  </div>
 </section>
