--- a/src/FlexTemplate/wwwroot/css/your-style.css
+++ b/src/FlexTemplate/wwwroot/css/your-style.css
@@ -4,6 +4,41 @@ Author:         Crenoveative
 URL:            http://crenoveative.com/
 Created:        24/10/2016
 -------------------------------------------------------------------*/
+
+
 /**
  * Add your style in this file
 */
+
+.user-edit-icon {
+  position: absolute;
+  top: 2px;
+  right: 2px;
+  content: "";
+  cursor: pointer;
+  display: block;
+  width: 20px;
+  height: 20px;
+  opacity: .6;
+  background: url(../images/ico/user-edit-icon.png) no-repeat;
+  background-size: 100% 100%;
+  transition: opacity 0.5s ease-in-out;
+  z-index: 99;
+}
+
+.user-edit-icon:hover {
+  opacity: 1;
+}
+
+.user-edit-button {
+	margin: 10px 0;
+	display: block;
+}
+
+.user-edit-textarea {
+	width: 100%;
+	height: auto;
+	max-width: 100%;
+	min-width: 100px;
+	min-height: 40px;
+}
