[ADD] Измененты тестовые данные вьюмоделей

--- a/src/FlexTemplate/Views/Shared/Components/OtherCitiesPlaces/Default.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/OtherCitiesPlaces/Default.cshtml
@@ -8,7 +8,7 @@
         <span class="user-edit-icon"></span>
         <div class="col-md-8">
           <div class="section-title-02">
-            <h3><span>Your Nearest Destinations</span></h3>
+            <h3><span>Інші популярні міста</span></h3>
             <p class="user-edit-text">Mist is highly flexible, and will be able to adjust to any of your customization’s. Get your projects to a new level. Included is animation on view, Parallax block, counters and charts, high resolution graphics etc.</p>
           </div>
         </div>
