--- a/src/FlexTemplate/Views/Shared/Components/Search/Default.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Search/Default.cshtml
@@ -2,8 +2,8 @@
 <!-- start hero-header -->
 <div class="c-search hero alt-height" style="background-image:url('@Model.PhotoPath');">
   <div class="container">
-    <h1>Find the best restaurants at the best price</h1>
-    <p>More than 20,000 restaurants all around the world and in your country or city</p>
+    <h1>Знайдіть найкращі ресторани за привабливою ціною!</h1>
+    <p>Більш ніж 5000 ресторанів по всій Україні</p>
     <div class="home-search-form">
       <form>
         <div class="form-group location-form">
@@ -33,10 +33,10 @@
             <option value="6">6</option>
           </select>
         </div>-->
-        <button class="btn btn-primary btn-form">Find a Table</button>
+        <button class="btn btn-primary btn-form">Знайти</button>
       </form>
       <div class="clear"></div>
-      <p class="around-you"><a href="#">Or view all 360 restaurants in and/or around your current city</a></p>
+      <p class="around-you"><a href="#">Або погляньте на інші 128 ресторанів вашого міста</a></p>
     </div>
   </div>
 </div>
