--- a/src/FlexTemplate/Views/Shared/Components/ThisCityPlace/Default.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/ThisCityPlace/Default.cshtml
@@ -17,7 +17,7 @@
                         <span class="texting">@Model.ReviewsCount</span>
                     </div>
                                   
-                    <p class="cuisine">Cuisine:
+                    <p class="cuisine">Кухні:
                     @foreach (var category in Model.Categories)
                     {
                         <span>@category</span>
