--- a/src/FlexTemplate/Views/Shared/Components/ThisCityPlaces/Default.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/ThisCityPlaces/Default.cshtml
@@ -6,8 +6,8 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="section-title-02">
-                        <h3><span>Featured Restaurants in Your City</span></h3>
-                        <p>Hand-Picked Restaurants with Exclusive Menus across Bangkok</p>
+                        <h3><span>Ресторани у твоєму місті</span></h3>
+                        <p>Найкращі ресторани міста на будь-який смак</p>
                     </div>
                 </div>
             </div>
@@ -20,7 +20,7 @@
                         }
                     </div>
                     <div class="text-center">
-                        <a href="#" class="btn btn-primary">More Restaurants</a>
+                        <a href="#" class="btn btn-primary">Більше ресторанів</a>
                     </div>
                 </div>
             </div>
