--- a/src/FlexTemplate/Views/Shared/_Layout.cshtml
+++ b/src/FlexTemplate/Views/Shared/_Layout.cshtml
@@ -92,5 +92,6 @@
     <script type="text/javascript" src="~/js/bootstrap-modal.js"></script>
     <script type="text/javascript" src="~/js/instagram.min.js"></script>
     <script type="text/javascript" src="~/js/customs.js"></script>
+    <script type="text/javascript" src="~/js/ajax.js"></script>
 </body>
 </html>
